--- a/couch/_attachments/index.html
+++ b/couch/_attachments/index.html
@@ -8,14 +8,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
-	<title>10,000 Pixels</title>
+	<title>Nite Brite</title>
 	<meta name="author" content="@owise1">
+	<meta name="description" content="A collectively authored real-time pixel doodle.">
 	
 	<link rel="stylesheet" href="style.css?v=2">
 	<link rel="stylesheet" href="farbtastic.css">
-
-	<!-- // <script src="/js/libs/modernizr-1.7.min.js"></script> -->
-	<!-- // <script src="/js/libs/mustache.js"></script> -->
 
 </head>
 <body>
@@ -35,12 +33,12 @@
 
 		$(function(){
 			$('body').delegate('#stage', 'click', function(ev){
-				var x = ev.clientX;
-				var y = ev.clientY;
+				var x     = ev.clientX;
+				var y     = ev.clientY;
 				var color = $('#color').val();
-				var r = hexToR(color);
-				var g = hexToG(color);
-				var b = hexToB(color);
+				var r     = hexToR(color);
+				var g     = hexToG(color);
+				var b     = hexToB(color);
 
 				ph.push_color([x,y,r,g,b]);
 			});
